--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "first-node-code",
+  "name": "node-js",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.19.2"
-  }
+  "license": "ISC"
 }
